--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="grid-x">
         <div class="cell xlarge-3">
           <div class="logo-wrapper">
-            <a href="/"><img src="/images/FreddieMacLogo.svg" alt="Freddie Mac Home" style="width: 12.3125rem"/></a>
+            <a href="/"><img src="/images/PrimaryLogo.svg" alt="Freddie Mac Home" style="width: 12.3125rem"/></a>
           </div>
         </div>
         <div class="cell xlarge-9">
