--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   <ul role="list" class="menu vertical submenu" style="display:none;">
                     <li role="list-item"><a href="https://myhome.freddiemac.com/">
                       <p>My Home by Freddie Mac®</p>
-                      <span>Resources to help our rent, buy and own your home.</span>
+                      <span>Resources to help you rent, buy and own your home.</span>
                     </a></li>
                     <li role="list-item"><a href="https://loanlookup.freddiemac.com/">
                       <p>Do we own your mortgage?</p>
