--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
                   <ul role="list" class="menu vertical submenu" style="display:none;">
                     <li><a href="https://sf.freddiemac.com/">
                       <p>Single-Family Division</p>
-                      <span>For lenders, servicers and industry partners.</span>
-                    </a></li>
-                    <li><a href="https://guide.freddiemac.com/">
-                      <p>Seller/Servicer Guide</p>
-                      <span>Freddie Mac’s selling and servicing requirements.</span>
+                      <span>Insights, products, and technology to help you grow your business.</span>
                     </a></li>
                     <li><a href="https://my.sf.freddiemac.com/">
                       <p>Client Resource Center</p>
-                      <span>Articles, news, links and more for mortgage sellers and servicers. </span>
+                      <span>Resources, training, System Status, and FAQ to help you run your business.</span>
+                    </a></li>
+                    <li><a href="https://guide.freddiemac.com/">
+                      <p>Seller/Servicer Guide</p>
+                      <span>Learn how to work with us with our Guide Bulletins and Industry Letters.</span>
                     </a></li>
                   </ul>
                 </li>
