change global hamburger to chevron

--- a/index.html
+++ b/index.html
@@ -5,27 +5,23 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hat And Shoes</title>
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
-    <link rel="icon" type="image/png" href="/images/favicon.png" />    
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
     <link rel="stylesheet" href="https://use.typekit.net/izj2zwr.css">
-    <link rel="stylesheet" href="/ss/globals.css" /> 
-  </head>  
+    <link rel="stylesheet" href="/ss/globals.css" />
+  </head>
   <body>
-  <div class="ribbon-wrapper grid-container fluid-at-xlarge" id="ribbon">    
-    <div id="ribbon-nav" class="grid-x ribbon-nav" data-toggler=".is-mobile-expanded">  
+  <div class="ribbon-wrapper grid-container fluid-at-xlarge" id="ribbon">
+    <div id="ribbon-nav" class="grid-x ribbon-nav" data-toggler=".is-mobile-expanded">
       <div class="cell">
         <nav role="navigation">
           <ul role="list" class="menu horizontal ribbon-links">
-            <li role="list-item" data-expanded=""><a id="mobile-ribbon-trigger" role="button" tabindex="0" class="hide-for-large" href="javascript:void(0);" 
-               data-toggle="ribbon-nav">Freddie Mac Home <div class="ribbon-icon">
-                <span></span>
-                <span></span>
-                <span></span>
-              </div><span class="show-for-sr">View our other sites</span></a>
-              <ul role="list" id="ribbon-accordion" class="menu accordion-menu" data-accordion-menu="" data-multi-open="false" data-slide-speed="200">    
-                <li role="list-item" class="show-for-large"><a class="active" href="/">Freddie Mac Home</a></li>   
+            <li role="list-item" data-expanded=""><a id="mobile-ribbon-trigger" role="button" tabindex="0" class="hide-for-large" href="javascript:void(0);"
+               data-toggle="ribbon-nav">Freddie Mac Home <div class="ribbon-icon"><span class="icon-chevron-down accent-blue"></span></div><span class="show-for-sr">View our other sites</span></a>
+              <ul role="list" id="ribbon-accordion" class="menu accordion-menu" data-accordion-menu="" data-multi-open="false" data-slide-speed="200">
+                <li role="list-item" class="show-for-large"><a class="active" href="/">Freddie Mac Home</a></li>
                 <li role="list-item"><a role="button" tabindex="0" href="javascript:void(0);"><span class="show-for-sr">View sites for </span>Single-Family Division<span class="icon-chevron-down accent-blue"></span></a>
                   <ul role="list" class="menu vertical submenu" style="display:none;">
                     <li><a href="https://sf.freddiemac.com/">
@@ -56,7 +52,7 @@
                       <p>Optigo Academy</p>
                       <span>One-stop learning for Optigo lenders.</span>
                     </a></li>
-                  </ul>              
+                  </ul>
                 </li>
                 <li role="list-item"><a href="/capital-markets/">Capital Markets Division</a></li>
                 <li role="list-item"><a role="button" tabindex="0" href="javascript:void(0);"><span class="show-for-sr">View sites for </span>Renters, Buyers and Owners<span class="icon-chevron-down accent-blue"></span></a>
@@ -78,10 +74,10 @@
                       <span>Buy a home from HomeSteps®, the real estate sales unit of Freddie Mac.</span>
                     </a></li>
                   </ul>
-                </li> 
+                </li>
               </ul>
-            </li>          
-          </ul>         
+            </li>
+          </ul>
         </nav>
       </div>
     </div>
@@ -90,8 +86,8 @@
   <div style="min-height: 20rem;">
     <!-- content would go here -->
   </div>
-  
-             
+
+
   <footer role="navigation" class="fatfooter hide-for-print">
     <div class="footer-top background-concrete grid-container fluid">
       <div class="grid-x">
@@ -110,11 +106,11 @@
                     <p><a href="/about/">About Us</a></p>
                     <p><a href="/about/company/">Our Company</a></p>
                     <p><a href="/media-room/">Media Room</a></p>
-                    <p><a href="/investors/">Investor Relations</a></p>  
-                    <p><a class="offsite" href="https://careers.freddiemac.com/">Careers</a></p> 
-                    <p><a href="/about/people/suppliers.html">Our Suppliers</a></p>      
-                    <p><a href="/about/about/covid-19.html">Our COVID-19 Response</a></p> 
-                  </div>  
+                    <p><a href="/investors/">Investor Relations</a></p>
+                    <p><a class="offsite" href="https://careers.freddiemac.com/">Careers</a></p>
+                    <p><a href="/about/people/suppliers.html">Our Suppliers</a></p>
+                    <p><a href="/about/about/covid-19.html">Our COVID-19 Response</a></p>
+                  </div>
                 </div>
                 <div class="cell large-6">
                   <div class="footer-top-section">
@@ -122,9 +118,9 @@
                     <p><a class="offsite" href="https://sf.freddiemac.com/">Single-Family Division</a></p>
                     <p><a class="offsite" href="https://mf.freddiemac.com/">Multifamily Division</a></p>
                     <p><a href="/capital-markets/">Capital Markets Division</a></p>
-                  </div> 
+                  </div>
                 </div>
-              </div>      
+              </div>
             </div>
             <div class="cell medium-6">
               <div class="grid-x grid-margin-x">
@@ -136,14 +132,14 @@
                     <p><a href="https://loanlookup.freddiemac.com/">Mortgage Lookup Tool</a></p>
                     <p><a class="offsite" href="https://myhome.freddiemac.com/renting/lookup.html">Rental Lookup Tool</a></p>
                     <p><a class="offsite" href="http://myhome.freddiemac.com/">My Home by Freddie <span class="no-wrap">Mac<sup>®</sup></span></a></p>
-                  </div> 
+                  </div>
                 </div>
                 <div class="cell large-6">
                   <div class="footer-top-section">
                     <p class="weight-medium">Connect With Us</p>
                     <p><a href="/about/contact-us.html">Contact Us</a></p>
                     <p><a href="/about/connect-with-us.html">Sign up for news, tips, and insights</a></p>
-                  </div> 
+                  </div>
                 </div>
               </div>
             </div>
