Updated hat and shoes

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
     <title>Hat And Shoes</title>
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
-    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="icon" type="image/png" href="/images/favicon.png" />    
     <link rel="stylesheet" href="https://use.typekit.net/izj2zwr.css">
-    <link rel="stylesheet" href="/ss/globals.css" />
-  </head>
+    <link rel="stylesheet" href="/ss/globals.css" /> 
+  </head>  
   <body>
   <div class="ribbon-wrapper grid-container fluid-at-xlarge" id="ribbon">
     <div id="ribbon-nav" class="grid-x ribbon-nav" data-toggler=".is-mobile-expanded">
@@ -21,20 +21,20 @@
             <li role="list-item" data-expanded=""><a id="mobile-ribbon-trigger" role="button" tabindex="0" class="hide-for-large" href="javascript:void(0);"
                data-toggle="ribbon-nav">Freddie Mac Home <div class="ribbon-icon"><span class="icon-chevron-down accent-blue"></span></div><span class="show-for-sr">View our other sites</span></a>
               <ul role="list" id="ribbon-accordion" class="menu accordion-menu" data-accordion-menu="" data-multi-open="false" data-slide-speed="200">
-                <li role="list-item" class="show-for-large"><a class="active" href="/">Freddie Mac Home</a></li>
+                <li role="list-item" class="show-for-large"><a class="active" href="http://www.freddiemac.com">Freddie Mac Home</a></li>
                 <li role="list-item"><a role="button" tabindex="0" href="javascript:void(0);"><span class="show-for-sr">View sites for </span>Single-Family Division<span class="icon-chevron-down accent-blue"></span></a>
                   <ul role="list" class="menu vertical submenu" style="display:none;">
                     <li><a href="https://sf.freddiemac.com/">
                       <p>Single-Family Division</p>
-                      <span>Insights, products, and technology to help you grow your business.</span>
-                    </a></li>
-                    <li><a href="https://my.sf.freddiemac.com/">
-                      <p>Client Resource Center</p>
-                      <span>Resources, training, System Status, and FAQ to help you run your business.</span>
+                      <span>For lenders, servicers and industry partners.</span>
                     </a></li>
                     <li><a href="https://guide.freddiemac.com/">
                       <p>Seller/Servicer Guide</p>
-                      <span>Learn how to work with us with our Guide Bulletins and Industry Letters.</span>
+                      <span>Freddie Mac’s selling and servicing requirements.</span>
+                    </a></li>
+                    <li><a href="https://my.sf.freddiemac.com/">
+                      <p>Client Resource Center</p>
+                      <span>Articles, news, links and more for mortgage sellers and servicers. </span>
                     </a></li>
                   </ul>
                 </li>
@@ -65,13 +65,13 @@
                       <p>Do we own your mortgage?</p>
                       <span>Find out if Freddie Mac owns your loan using our secured lookup tool.</span>
                     </a></li>
-                    <li role="list-item"><a href="https://myhome.freddiemac.com/renting/lookup.html">
+                    <li role="list-item"><a href="https://myhome.freddiemac.com/renting/lookup">
                       <p>Did we finance your apartment?</p>
                       <span>Use our lookup tool to see if Freddie Mac financed your apartment building.</span>
                     </a></li>
-                    <li role="list-item"><a href="https://www.homesteps.com/">
-                      <p>Homes for sale</p>
-                      <span>Buy a home from HomeSteps®, the real estate sales unit of Freddie Mac.</span>
+                    <li role="list-item"><a href="https://creditsmart.freddiemac.com/">
+                      <p>CreditSmart&reg;</p>
+                      <span>Financial and homeownership education resources all about you.</span>
                     </a></li>
                   </ul>
                 </li>
@@ -86,8 +86,8 @@
   <div style="min-height: 20rem;">
     <!-- content would go here -->
   </div>
-
-
+  
+             
   <footer role="navigation" class="fatfooter hide-for-print">
     <div class="footer-top background-concrete grid-container fluid">
       <div class="grid-x">
@@ -103,21 +103,21 @@
                 <div class="cell large-6">
                   <div class="footer-top-section">
                     <p class="weight-medium">Our Company</p>
-                    <p><a href="/about/">About Us</a></p>
-                    <p><a href="/about/company/">Our Company</a></p>
-                    <p><a href="/media-room/">Media Room</a></p>
-                    <p><a href="/investors/">Investor Relations</a></p>
-                    <p><a class="offsite" href="https://careers.freddiemac.com/">Careers</a></p>
-                    <p><a href="/about/people/suppliers.html">Our Suppliers</a></p>
-                    <p><a href="/about/about/covid-19.html">Our COVID-19 Response</a></p>
+                    <p><a href="http://www.freddiemac.com/about">About Us</a></p>
+                    <p><a href="http://www.freddiemac.com/about/company">Our Company</a></p>
+                    <p><a href="http://www.freddiemac.com/media-room">Media Room</a></p>
+                    <p><a href="http://www.freddiemac.com/investors">Investor Relations</a></p>
+                    <p><a href="https://careers.freddiemac.com/">Careers</a></p>
+                    <p><a href="http://www.freddiemac.com/about/people/suppliers.html">Our Suppliers</a></p>
+                    <p><a href="http://www.freddiemac.com/about/about/covid-19.html">Our COVID-19 Response</a></p>
                   </div>
                 </div>
                 <div class="cell large-6">
                   <div class="footer-top-section">
                     <p class="weight-medium">Our Business</p>
-                    <p><a class="offsite" href="https://sf.freddiemac.com/">Single-Family Division</a></p>
-                    <p><a class="offsite" href="https://mf.freddiemac.com/">Multifamily Division</a></p>
-                    <p><a href="/capital-markets/">Capital Markets Division</a></p>
+                    <p><a href="https://sf.freddiemac.com/">Single-Family Division</a></p>
+                    <p><a href="https://mf.freddiemac.com/">Multifamily Division</a></p>
+                    <p><a href="http://capitalmarkets.freddiemac.com/capital-markets/">Capital Markets Division</a></p>
                   </div>
                 </div>
               </div>
@@ -127,11 +127,11 @@
                 <div class="cell large-6">
                   <div class="footer-top-section">
                     <p class="weight-medium">Resources</p>
-                    <p><a href="https://myhome.freddiemac.com/getting-help/relief-for-homeowners.html">Covid Relief for Homeowners</a></p>
-                    <p><a href="https://myhome.freddiemac.com/renting/relief-for-landlords-and-renters.html">Covid Relief for Renters</a></p>
+                    <p><a href="https://myhome.freddiemac.com/getting-help/relief-for-homeowners">Covid Relief for Homeowners</a></p>
+                    <p><a href="https://myhome.freddiemac.com/renting/relief-for-landlords-and-renters">Covid Relief for Renters</a></p>
                     <p><a href="https://loanlookup.freddiemac.com/">Mortgage Lookup Tool</a></p>
-                    <p><a class="offsite" href="https://myhome.freddiemac.com/renting/lookup.html">Rental Lookup Tool</a></p>
-                    <p><a class="offsite" href="http://myhome.freddiemac.com/">My Home by Freddie <span class="no-wrap">Mac<sup>®</sup></span></a></p>
+                    <p><a href="https://myhome.freddiemac.com/renting/lookup">Rental Lookup Tool</a></p>
+                    <p><a href="https://myhome.freddiemac.com">My Home by Freddie <span class="no-wrap">Mac<sup>®</sup></span></a></p>
                   </div>
                 </div>
                 <div class="cell large-6">
@@ -151,7 +151,7 @@
       <div class="grid-x">
         <div class="cell large-3 medium-4 small-order-2 medium-order-1">
           <div class="copy-wrapper show-for-medium">
-            &copy; 2021 <span class="no-wrap">Freddie Mac</span>
+            &copy; 2022 <span class="no-wrap">Freddie Mac</span>
           </div>
         </div>
         <div class="cell large-9 medium-8 small-order-1 medium-order-2">
@@ -161,7 +161,7 @@
             <li><a href="/terms/privary.html">Privacy Policy</a></li>
             <li><a href="/terms/privacy_ca.html">California Privacy</a></li>
             <li class="copy-wrapper hide-for-medium">
-              &copy; 2021 <span class="no-wrap">Freddie Mac</span>
+              &copy; 2022 <span class="no-wrap">Freddie Mac</span>
             </li>
             <li class="icon">
               <a aria-label="Facebook" href="https://www.facebook.com/FreddieMac" class="connect-link"><svg viewBox="0 0 10 18" style="width:0.625rem;height:1.125rem;" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 6H0v3h2.5v9h4.167V9h3.035L10 6H6.667V4.75c0-.716.16-1 .929-1H10V0H6.827C3.83 0 2.5 1.187 2.5 3.461V6z" fill="#FFF" fill-rule="nonzero"/></svg>
