Updated hat and shoes

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hat And Shoes</title>
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
-    <link rel="icon" type="image/png" href="/images/favicon.png" />    
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
     <link rel="stylesheet" href="https://use.typekit.net/izj2zwr.css">
-    <link rel="stylesheet" href="/ss/globals.css" /> 
-  </head>  
+    <link rel="stylesheet" href="/ss/globals.css" />
+  </head>
   <body>
   <div class="ribbon-wrapper grid-container fluid-at-xlarge" id="ribbon">
     <div id="ribbon-nav" class="grid-x ribbon-nav" data-toggler=".is-mobile-expanded">
@@ -86,8 +86,8 @@
   <div style="min-height: 20rem;">
     <!-- content would go here -->
   </div>
-  
-             
+
+
   <footer role="navigation" class="fatfooter hide-for-print">
     <div class="footer-top background-concrete grid-container fluid">
       <div class="grid-x">
@@ -290,8 +290,8 @@
                 <div class="cell large-6">
                   <div class="footer-top-section">
                     <p class="weight-medium">Connect With Us</p>
-                    <p><a href="/about/contact-us.html">Contact Us</a></p>
-                    <p><a href="/about/connect-with-us.html">Sign up for news, tips, and insights</a></p>
+                    <p><a href="http://www.freddiemac.com/about/contact-us.html">Contact Us</a></p>
+                    <p><a href="http://www.freddiemac.com/about/connect-with-us.html">Sign up for news, tips, and insights</a></p>
                   </div>
                 </div>
               </div>
@@ -310,9 +310,9 @@
         <div class="cell large-9 medium-8 small-order-1 medium-order-2">
           <span class="show-for-sr">Follow us on social media</span>
           <ul class="flex no-bullet">
-            <li><a href="/terms/">Terms of Use</a></li>
-            <li><a href="/terms/privary.html">Privacy Policy</a></li>
-            <li><a href="/terms/privacy_ca.html">California Privacy</a></li>
+            <li><a href="http://www.freddiemac.com/terms">Terms of Use</a></li>
+            <li><a href="http://www.freddiemac.com/terms/privary.html">Privacy Policy</a></li>
+            <li><a href="http://www.freddiemac.com/terms/privacy_ca.html">California Privacy</a></li>
             <li class="copy-wrapper hide-for-medium">
               &copy; 2022 <span class="no-wrap">Freddie Mac</span>
             </li>
