--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 
 <html class="no-js" lang="en">
   <head>
@@ -32,10 +32,6 @@
                       <p>Seller/Servicer Guide</p>
                       <span>Freddie Mac’s selling and servicing requirements.</span>
                     </a></li>
-                    <li><a href="https://my.sf.freddiemac.com/">
-                      <p>Client Resource Center</p>
-                      <span>Articles, news, links and more for mortgage sellers and servicers. </span>
-                    </a></li>
                   </ul>
                 </li>
                 <li role="list-item"><a href="https://mf.freddiemac.com/">Multifamily Division</a></li>
@@ -46,7 +42,7 @@
                       <p>My Home by Freddie Mac<sup>®</sup></p>
                       <span>Resources to help you rent, buy and own your home.</span>
                     </a></li>
-                    <li role="list-item"><a href="https://loanlookup.freddiemac.com/">
+                    <li role="list-item"><a href="https://myhome.freddiemac.com/resources/loanlookup">
                       <p>Do we own your mortgage?</p>
                       <span>Find out if Freddie Mac owns your loan using our secured lookup tool.</span>
                     </a></li>
@@ -89,7 +85,7 @@
                   <div class="footer-top-section">
                     <p class="weight-medium">Our Company</p>
                     <p><a href="https://www.freddiemac.com/about">About Us</a></p>
-                    <p><a href="https://www.freddiemac.com/about/company">Our Company</a></p>
+                    <p><a href="https://www.freddiemac.com/about/company">Our Mission</a></p>
                     <p><a href="https://www.freddiemac.com/media-room">Media Room</a></p>
                     <p><a href="https://www.freddiemac.com/investors">Investor Relations</a></p>
                     <p><a href="https://careers.freddiemac.com/">Careers</a></p>
@@ -112,7 +108,7 @@
                   <div class="footer-top-section">
                     <p class="weight-medium">Resources</p>
                     <p><a href="https://www.freddiemac.com/about/about/covid-19">Covid Relief for Homeowners and Renters</a></p>
-                    <p><a href="https://loanlookup.freddiemac.com/">Mortgage Lookup Tool</a></p>
+                    <p><a href="https://myhome.freddiemac.com/resources/loanlookup">Mortgage Lookup Tool</a></p>
                     <p><a href="https://myhome.freddiemac.com/renting/lookup">Rental Lookup Tool</a></p>
                     <p><a href="https://myhome.freddiemac.com">My Home by Freddie <span class="no-wrap">Mac<sup>®</sup></span></a></p>
                     <p><a href="https://creditsmart.freddiemac.com/">CreditSmart<sup>®</sup></a></p>
@@ -136,7 +132,7 @@
       <div class="grid-x">
         <div class="cell large-3 medium-4 small-order-2 medium-order-1">
           <div class="copy-wrapper show-for-medium">
-            &copy; 2022 <span class="no-wrap">Freddie Mac</span>
+            &copy; 2023 <span class="no-wrap">Freddie Mac</span>
           </div>
         </div>
         <div class="cell large-9 medium-8 small-order-1 medium-order-2">
@@ -144,9 +140,9 @@
           <ul class="flex no-bullet">
             <li><a href="https://www.freddiemac.com/terms">Terms of Use</a></li>
             <li><a href="https://www.freddiemac.com/terms/privacy">Privacy Policy</a></li>
-            <li><a href="https://www.freddiemac.com/terms/privacy_ca">California Privacy</a></li>
+            <li><a href="https://www.freddiemac.com/terms/state_privacy_notices">State Privacy Notices</a></li>
             <li class="copy-wrapper hide-for-medium">
-              &copy; 2022 <span class="no-wrap">Freddie Mac</span>
+              &copy; 2023 <span class="no-wrap">Freddie Mac</span>
             </li>
             <li class="icon">
               <a aria-label="Facebook" href="https://www.facebook.com/FreddieMac" class="connect-link"><svg viewBox="0 0 10 18" style="width:0.625rem;height:1.125rem;" aria-hidden="true" xmlns="https://www.w3.org/2000/svg"><path d="M2.5 6H0v3h2.5v9h4.167V9h3.035L10 6H6.667V4.75c0-.716.16-1 .929-1H10V0H6.827C3.83 0 2.5 1.187 2.5 3.461V6z" fill="#FFF" fill-rule="nonzero"/></svg></a>
@@ -158,6 +154,7 @@
         </div>
       </div>
     </div>
-  </footer>  <script src="js/globals.js"></script>
+  </footer>  
+  <script src="js/globals.js"></script>
   </body>
 </html>
