Update alt text in index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="grid-x">
         <div class="cell xlarge-3">
           <div class="logo-wrapper">
-            <a href="https://www.freddiemac.com"><img src="images/PrimaryLogo.svg" alt="Freddie Mac Home" style="width: 12.3125rem"/></a>
+            <a href="https://www.freddiemac.com"><img src="images/PrimaryLogo.svg" alt="Freddie Mac Logo" style="width: 12.3125rem"/></a>
           </div>
         </div>
         <div class="cell xlarge-9">
