--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <li role="list-item" data-expanded=""><a id="mobile-ribbon-trigger" role="button" tabindex="0" class="hide-for-large" href="javascript:void(0);"
                data-toggle="ribbon-nav">Freddie Mac Home <div class="ribbon-icon"><span class="icon-chevron-down accent-blue"></span></div><span class="show-for-sr">View our other sites</span></a>
               <ul role="list" id="ribbon-accordion" class="menu accordion-menu" data-accordion-menu="" data-multi-open="false" data-slide-speed="200">
-                <li role="list-item" class="show-for-large"><a class="active" href="https://www.freddiemac.com/">Freddie Mac Home</a></li>
+                <li role="list-item" class="show-for-large"><a class="active" href="https://www.freddiemac.com">Freddie Mac Home</a></li>
                 <li role="list-item"><a role="button" tabindex="0" href="javascript:void(0);"><span class="show-for-sr">View sites for </span>Single-Family Division<span class="icon-chevron-down accent-blue"></span></a>
                   <ul role="list" class="menu vertical submenu" style="display:none;">
-                    <li><a href="https://sf.freddiemac.com/">
+                    <li><a href="https://sf.freddiemac.com">
                       <p>Single-Family Division</p>
                       <span>For lenders, servicers and industry partners.</span>
                     </a></li>
@@ -34,11 +34,11 @@
                     </a></li>
                   </ul>
                 </li>
-                <li role="list-item"><a href="https://mf.freddiemac.com/">Multifamily Division</a></li>
+                <li role="list-item"><a href="https://mf.freddiemac.com">Multifamily Division</a></li>
                 <li role="list-item"><a href="https://capitalmarkets.freddiemac.com">Capital Markets Division</a></li>
                 <li role="list-item"><a role="button" tabindex="0" href="javascript:void(0);"><span class="show-for-sr">View sites for </span>Renters, Buyers and Owners<span class="icon-chevron-down accent-blue"></span></a>
                   <ul role="list" class="menu vertical submenu" style="display:none;">
-                    <li role="list-item"><a href="https://myhome.freddiemac.com/">
+                    <li role="list-item"><a href="https://myhome.freddiemac.com">
                       <p>My Home by Freddie Mac<sup>®</sup></p>
                       <span>Resources to help you rent, buy and own your home.</span>
                     </a></li>
@@ -131,7 +131,7 @@
       <div class="grid-x">
         <div class="cell large-3 medium-4 small-order-2 medium-order-1">
           <div class="copy-wrapper show-for-medium">
-            &copy; 2023 <span class="no-wrap">Freddie Mac</span>
+            &copy; 2024 <span class="no-wrap">Freddie Mac</span>
           </div>
         </div>
         <div class="cell large-9 medium-8 small-order-1 medium-order-2">
@@ -141,7 +141,7 @@
             <li><a href="https://www.freddiemac.com/terms/privacy">Privacy Policy</a></li>
             <li><a href="https://www.freddiemac.com/terms/state_privacy_notices">State Privacy Notices</a></li>
             <li class="copy-wrapper hide-for-medium">
-              &copy; 2023 <span class="no-wrap">Freddie Mac</span>
+              &copy; 2024 <span class="no-wrap">Freddie Mac</span>
             </li>
             <li class="icon">
               <a aria-label="Facebook" href="https://www.facebook.com/FreddieMac" class="connect-link"><svg viewBox="0 0 10 18" style="width:0.625rem;height:1.125rem;" aria-hidden="true" xmlns="https://www.w3.org/2000/svg"><path d="M2.5 6H0v3h2.5v9h4.167V9h3.035L10 6H6.667V4.75c0-.716.16-1 .929-1H10V0H6.827C3.83 0 2.5 1.187 2.5 3.461V6z" fill="#FFF" fill-rule="nonzero"/></svg></a>
