--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
                     <p><a href="https://www.freddiemac.com/about/company">Our Mission</a></p>
                     <p><a href="https://www.freddiemac.com/media-room">Media Room</a></p>
                     <p><a href="https://www.freddiemac.com/investors">Investor Relations</a></p>
-                    <p><a href="https://careers.freddiemac.com/">Careers</a></p>
-                    <p><a href="https://www.freddiemac.com/about/people/suppliers">Our Suppliers</a></p>
+                    <p><a href="https://careers.freddiemac.com">Careers</a></p>
+                    <p><a href="https://www.freddiemac.com/about/our-suppliers">Our Suppliers</a></p>
                   </div>
                 </div>
                 <div class="cell large-6">
                   <div class="footer-top-section">
                     <p class="weight-medium">Our Business</p>
-                    <p><a href="https://sf.freddiemac.com/">Single-Family Division</a></p>
-                    <p><a href="https://mf.freddiemac.com/">Multifamily Division</a></p>
+                    <p><a href="https://sf.freddiemac.com">Single-Family Division</a></p>
+                    <p><a href="https://mf.freddiemac.com">Multifamily Division</a></p>
                     <p><a href="https://capitalmarkets.freddiemac.com">Capital Markets Division</a></p>
                   </div>
                 </div>
@@ -110,8 +110,7 @@
                     <p><a href="https://myhome.freddiemac.com/resources/loanlookup">Mortgage Lookup Tool</a></p>
                     <p><a href="https://myhome.freddiemac.com/renting/lookup">Rental Lookup Tool</a></p>
                     <p><a href="https://myhome.freddiemac.com">My Home by Freddie <span class="no-wrap">Mac<sup>®</sup></span></a></p>
-                    <p><a href="https://creditsmart.freddiemac.com/">CreditSmart<sup>®</sup></a></p>
-                    <p><a href="https://www.freddiemac.com/about/reference-rates-transition">Reference Rates Transition</a></p>
+                    <p><a href="https://creditsmart.freddiemac.com">CreditSmart<sup>®</sup></a></p>
                   </div>
                 </div>
                 <div class="cell large-6">
@@ -147,7 +146,7 @@
               <a aria-label="Facebook" href="https://www.facebook.com/FreddieMac" class="connect-link"><svg viewBox="0 0 10 18" style="width:0.625rem;height:1.125rem;" aria-hidden="true" xmlns="https://www.w3.org/2000/svg"><path d="M2.5 6H0v3h2.5v9h4.167V9h3.035L10 6H6.667V4.75c0-.716.16-1 .929-1H10V0H6.827C3.83 0 2.5 1.187 2.5 3.461V6z" fill="#FFF" fill-rule="nonzero"/></svg></a>
               <a aria-label="YouTube" href="https://www.youtube.com/freddiemac" class="connect-link"><svg aria-hidden="true" viewBox="0 0 26 18" style="width:1.625rem;height:1.125rem;" xmlns="https://www.w3.org/2000/svg"><path d="M13.456 0c.83.005 2.675.022 4.568.089l.569.021c1.893.077 3.737.207 4.565.426 1.119.296 2 1.167 2.299 2.274.48 1.776.536 5.262.542 6.035L26 8.99V9.154c-.007.774-.062 4.259-.543 6.035a3.239 3.239 0 01-2.3 2.274c-.827.219-2.671.349-4.564.426l-.569.021c-1.988.07-3.923.086-4.685.089h-.679a167.41 167.41 0 01-4.119-.07l-.566-.019c-2.082-.073-4.223-.206-5.133-.447a3.239 3.239 0 01-2.299-2.274C.063 13.413.007 9.928.001 9.154v-.309c.006-.773.061-4.259.542-6.035A3.238 3.238 0 012.842.536c.91-.24 3.05-.374 5.133-.447L8.541.07C10.228.02 11.797.005 12.544 0zM10 5v8l7-4-7-4z" fill="#FFF" fill-rule="evenodd"/></svg></a>
               <a aria-label="LinkedIn" href="https://www.linkedin.com/company/3140" class="connect-link"><svg aria-hidden="true" viewBox="0 0 18 18" style="width:1.125rem;height:1.125rem;" xmlns="https://www.w3.org/2000/svg"><path d="M14.25 0H3.75A3.75 3.75 0 000 3.75v10.5A3.75 3.75 0 003.75 18h10.5A3.75 3.75 0 0018 14.25V3.75A3.75 3.75 0 0014.25 0zM6 14H4V6h2v8zM4.5 5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zM15 14h-2.4V9.924c0-2.449-3.2-2.263-3.2 0V14H7V6h2.4v1.284c1.117-1.88 5.6-2.02 5.6 1.8V14z" fill="#FFF" fill-rule="nonzero"/></svg></a>
-              <a aria-label="Twitter" href="https://twitter.com/FreddieMac" class="connect-link"><svg aria-hidden="true" viewBox="0 0 22 18" style="width:1.375rem;height:1.125rem;" xmlns="https://www.w3.org/2000/svg"><path d="M6.919 18C15.22 18 19.76 11.074 19.76 5.068c0-.196 0-.392-.013-.587A9.22 9.22 0 0022 2.128a8.961 8.961 0 01-2.592.715A4.555 4.555 0 0021.392.33a9.008 9.008 0 01-2.866 1.103 4.495 4.495 0 00-5.423-.895 4.56 4.56 0 00-2.27 5.04A12.785 12.785 0 011.532.829 4.567 4.567 0 002.93 6.896 4.457 4.457 0 01.88 6.328v.057a4.539 4.539 0 003.621 4.455 4.476 4.476 0 01-2.038.078 4.523 4.523 0 004.217 3.157A9.017 9.017 0 010 15.958a12.715 12.715 0 006.919 2.038" fill="#FFF" fill-rule="nonzero"/></svg></a>
+              <a aria-label="Twitter" href="https://twitter.com/FreddieMac" class="connect-link"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12" height="1em" style="fill:white;height:1.125rem; width:1.125rem;"><path d="M1.7,0C0.7,0,0,0.7,0,1.7v8.6C0,11.2,0.7,12,1.7,12h8.6c0.9,0,1.7-0.8,1.7-1.7V1.7C12,0.7,11.2,0,10.3,0H1.7z M9.6,2.2 L6.9,5.4l3.3,4.3H7.6l-2-2.6L3.3,9.7H2l3-3.4L1.8,2.2h2.6l1.8,2.4l2.1-2.4H9.6z M8.6,9l-4.6-6H3.3l4.6,6H8.6L8.6,9z"></path></svg></a>
             </li>
           </ul>
         </div>
